# RouletteWheel

./: .gitignore  CMakeLists.txt  README.md  RouletteWheel.hpp
benchmarks/: CMakeLists.txt  benchmark_construction.cpp  benchmark_operations.cpp  benchmark_selection.cpp
classes/: WheelRegion.hpp
examples/: CMakeLists.txt  ai_decisions.cpp  basic_usage.cpp  loot_system.cpp  weighted_selection.cpp
tests/: CMakeLists.txt  test_integration.cpp  test_roulette_wheel.cpp  test_wheel_region.cpp
